--- a/come-lavoriamo.html
+++ b/come-lavoriamo.html
@@ -9,7 +9,7 @@
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="index.html" class="logo">
+    <a href="proprietari.html" class="logo">
       <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
@@ -17,18 +17,14 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html" class="nav-link">Home</a>
-        <a href="proprietari.html" class="nav-link">Per i proprietari</a>
-        <a href="ospiti.html" class="nav-link">Per gli ospiti</a>
-        <a href="alloggi.html" class="nav-link">Alloggi</a>
-        <a href="come-lavoriamo.html" class="nav-link nav-link-active">Come lavoriamo</a>
-        <a href="chi-siamo.html" class="nav-link">Chi siamo</a>
-        <a href="faq.html" class="nav-link">FAQ</a>
-        <a href="contatti.html" class="nav-link">Contatti</a>
-        <a href="login.html" class="nav-link">Area proprietari</a>
-        
+      <a href="proprietari.html" class="nav-link">Home proprietari</a>
+      <a href="proprietari.html#come-funziona" class="nav-link">Come funziona</a>
+      <a href="proprietari.html#servizi-proprietari" class="nav-link">Servizi</a>
+      <a href="proprietari.html#commissione" class="nav-link">Commissione</a>
+      <a href="contatti.html" class="nav-link">Contatti</a>
+      <a href="login.html" class="nav-link">🔑 Area proprietari</a>
     </nav>
-    <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
+    <a href="ospiti.html" class="nav-link nav-link-ghost">Vuoi prenotare un soggiorno?</a>
   </div>
 </header>
 
@@ -39,7 +35,7 @@
     <p class="eyebrow">Come lavoriamo</p>
     <h1>Un metodo chiaro, pensato per massimizzare il tuo risultato.</h1>
     <p class="page-hero-subtitle">
-      Dall’analisi iniziale dell’immobile alla gestione quotidiana degli ospiti: 
+      Dall’analisi iniziale dell’immobile alla gestione quotidiana degli ospiti:
       ogni fase del nostro lavoro è strutturata per proteggere il tuo tempo e valorizzare la tua casa.
     </p>
   </div>
@@ -51,42 +47,42 @@
       <div class="step-block fade-in delay-1 lift-on-hover">
         <h2>1. Analisi del potenziale</h2>
         <p>
-          Studiamo la zona, la tipologia dell’immobile e il target ideale degli ospiti. 
+          Studiamo la zona, la tipologia dell’immobile e il target ideale degli ospiti.
           In questa fase ti diamo una stima realistica del potenziale di guadagno.
         </p>
       </div>
       <div class="step-block fade-in delay-2 lift-on-hover">
         <h2>2. Preparazione dell’alloggio</h2>
         <p>
-          Ti suggeriamo eventuali migliorie, il layout migliore degli spazi e coordiniamo le foto professionali. 
+          Ti suggeriamo eventuali migliorie, il layout migliore degli spazi e coordiniamo le foto professionali.
           L’obiettivo è far risaltare il tuo immobile rispetto alla concorrenza.
         </p>
       </div>
       <div class="step-block fade-in delay-3 lift-on-hover">
         <h2>3. Pubblicazione e strategia di prezzo</h2>
         <p>
-          Creiamo annunci efficaci sui portali, li ottimizziamo nel tempo e gestiamo i prezzi in modo dinamico, 
+          Creiamo annunci efficaci sui portali, li ottimizziamo nel tempo e gestiamo i prezzi in modo dinamico,
           seguendo domanda, stagione ed eventi in città.
         </p>
       </div>
       <div class="step-block fade-in delay-1 lift-on-hover">
         <h2>4. Gestione operativa</h2>
         <p>
-          Ci occupiamo di richieste, prenotazioni, check-in, check-out, pulizie e manutenzioni ordinarie, 
+          Ci occupiamo di richieste, prenotazioni, check-in, check-out, pulizie e manutenzioni ordinarie,
           mantenendo sempre aggiornato il calendario.
         </p>
       </div>
       <div class="step-block fade-in delay-2 lift-on-hover">
         <h2>5. Assistenza a ospiti e proprietari</h2>
         <p>
-          Siamo il punto di riferimento per gli ospiti durante il soggiorno e per te in ogni momento, 
+          Siamo il punto di riferimento per gli ospiti durante il soggiorno e per te in ogni momento,
           con un canale diretto di comunicazione.
         </p>
       </div>
       <div class="step-block fade-in delay-3 lift-on-hover">
         <h2>6. Reportistica e ottimizzazione continua</h2>
         <p>
-          Ti forniamo report periodici chiari e continuiamo a testare e migliorare descrizioni, foto e prezzi, 
+          Ti forniamo report periodici chiari e continuiamo a testare e migliorare descrizioni, foto e prezzi,
           per massimizzare le performance nel tempo.
         </p>
       </div>
