--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="index.html" class="logo">
+    <a href="proprietari.html" class="logo">
       <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
@@ -17,18 +17,14 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html" class="nav-link">Home</a>
-        <a href="proprietari.html" class="nav-link">Per i proprietari</a>
-        <a href="ospiti.html" class="nav-link">Per gli ospiti</a>
-        <a href="alloggi.html" class="nav-link">Alloggi</a>
-        <a href="come-lavoriamo.html" class="nav-link">Come lavoriamo</a>
-        <a href="chi-siamo.html" class="nav-link">Chi siamo</a>
-        <a href="faq.html" class="nav-link nav-link-active">FAQ</a>
-        <a href="contatti.html" class="nav-link">Contatti</a>
-        <a href="login.html" class="nav-link">Area proprietari</a>
-        
+      <a href="proprietari.html" class="nav-link">Home proprietari</a>
+      <a href="proprietari.html#come-funziona" class="nav-link">Come funziona</a>
+      <a href="proprietari.html#servizi-proprietari" class="nav-link">Servizi</a>
+      <a href="proprietari.html#commissione" class="nav-link">Commissione</a>
+      <a href="contatti.html" class="nav-link">Contatti</a>
+      <a href="login.html" class="nav-link">🔑 Area proprietari</a>
     </nav>
-    <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
+    <a href="ospiti.html" class="nav-link nav-link-ghost">Vuoi prenotare un soggiorno?</a>
   </div>
 </header>
 
@@ -49,28 +45,28 @@
     <details class="fade-in delay-1 lift-on-hover">
       <summary>Quanto può rendere il mio appartamento?</summary>
       <p>
-        Dipende dalla zona, dalla tipologia e da come è arredato. 
+        Dipende dalla zona, dalla tipologia e da come è arredato.
         Possiamo fornirti una stima gratuita e realistica dopo una breve analisi del tuo immobile.
       </p>
     </details>
     <details class="fade-in delay-2 lift-on-hover">
       <summary>Chi decide i prezzi degli alloggi?</summary>
       <p>
-        La strategia prezzi viene definita da noi sulla base dei dati, ma condividiamo sempre con te il posizionamento 
+        La strategia prezzi viene definita da noi sulla base dei dati, ma condividiamo sempre con te il posizionamento
         e gli obiettivi. Possiamo concordare eventuali limiti minimi o massimi.
       </p>
     </details>
     <details class="fade-in delay-3 lift-on-hover">
       <summary>Chi si occupa della pulizia e del cambio biancheria?</summary>
       <p>
-        Ci occupiamo noi di organizzare pulizie e biancheria tra un soggiorno e l’altro, 
+        Ci occupiamo noi di organizzare pulizie e biancheria tra un soggiorno e l’altro,
         con fornitori selezionati in base agli standard concordati.
       </p>
     </details>
     <details class="fade-in delay-1 lift-on-hover">
       <summary>Cosa succede se un ospite danneggia qualcosa?</summary>
       <p>
-        Gestiamo noi il contatto con l’ospite e le eventuali richieste tramite i portali utilizzati. 
+        Gestiamo noi il contatto con l’ospite e le eventuali richieste tramite i portali utilizzati.
         Ti aggiorniamo in modo trasparente su tutto il processo.
       </p>
     </details>
@@ -83,7 +79,7 @@
     <details class="fade-in delay-3 lift-on-hover">
       <summary>Come posso iniziare?</summary>
       <p>
-        Scrivici su WhatsApp o tramite il form nella pagina contatti. 
+        Scrivici su WhatsApp o tramite il form nella pagina contatti.
         Ti faremo qualche domanda sull’immobile e, se ci sono le condizioni, fisseremo un sopralluogo.
       </p>
     </details>
